--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "gulp": "^4.0.2",
     "jest": "^24.8.0",
     "jest-environment-node": "^24.8.0",
-    "near-shell": "github:nearprotocol/near-shell",
+    "near-shell": "^0.11.5",
     "serve": "^11.1.0"
   }
 }
